added implied vol email alerts and added compatibility to email_alerts for py2 and py3

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 /rapp.pyc
 /passwords.py
 /passwords.pyc
+/.ipynb_checkpoints
 # Compiled source #
 ###################
+*ipynb
 *.pyc
 *.com
 *.class
